# compare-rs

./: Cargo.toml  README.md
.github/workflows/: cdk-deploy.yml
deployment/: cdk.json  package-lock.json  package.json
deployment/lib/: deployment-stack.ts
src/: main.rs
