[package]
name = "compare-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
tokio = { version = "1", features = ["full"] }
lambda_runtime = "0.8.1"
lambda_http = "0.8.1"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.97"

